--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,28 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+        <script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
+        <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
+        <script type="text/babel" src="src/chat.js"></script>
+        <link rel="stylesheet" href="index.css">
         <script src="a.out.js"></script>
         <script src="racket.js"></script>
         <script src="index.js"></script>
+
     </head>
     <body>
       <container>
-        <div id="user-profile"></div>
+        <div class="row">
+          <div id="chat" class="col-4 ml-4"></div>
+          <div class="col-5 p-0"><canvas width="640" height="480"></canvas><div>
+          <div class="col-3 mr-4"></div>
+      
+        <div class="row">
       </container>
-      <canvas width="640" height="480"></canvas>
-
     </body>
 </html>
