--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="index.css">
@@ -12,14 +13,29 @@
   <body>
     <container>
       <div class="row">
-        <div class="col-4 ml-4">
+        <div class="col-5 ml-4">
+          <div id="f-nav" v-bind:style="styleDat">
+            <div>
+              <a href="#">chat</a>
+              <a href="#">login</a>
+            </div>
+          </div>
+          <div id="f-main" v-bind:style="styleDat">
+
+          </div>
+          <div id="f-send-msg" v-bind:style="styleDat">
+
+          </div>
         </div>
           <div class="col-5 p-0">
             <canvas width="640" height="480"></canvas>
           </div>
-        <div class="col-3 mr-4">
+        <div class="col-2 mr-4">
         </div>
       </div>
     </container>
+    <script src="https://unpkg.com/vue/dist/vue.js"></script>
+    <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
+    <script src="comp.js"></script>
   </body>
 </html>
