--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <body>
     <container>
       <div class="row">
-        <div class="col-5 ml-4">
+        <div class="col-3 ml-2">
           <div id="f-nav" v-bind:style="styleDat">
             <div>
               <a href="#">chat</a>
@@ -27,11 +27,15 @@
 
           </div>
         </div>
-          <div class="col-5 p-0">
-            <canvas width="640" height="480"></canvas>
+        <div class="col-2 p-0">
+          <div id="f-gui" v-bind:style="styleDat">
+            
           </div>
-        <div class="col-2 mr-4">
         </div>
+        <div class="col-6 ml-1">
+          <canvas width="640" height="480"></canvas>
+        </div>
+
       </div>
     </container>
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
