--- a/public/index.html
+++ b/public/index.html
@@ -13,33 +13,27 @@
   <body>
     <container>
       <div class="row">
-        <div class="col-3 ml-2">
-          <div id="f-nav" v-bind:style="styleDat">
+        <div class="col-3 pl-3 pr-0 m-0">
+          <div id="f-nav" :style="styleDat">
             <div>
-              <a href="#">chat</a>
-              <a href="#">login</a>
+              <a @click='currentTab = "chat-window"' href="#">chat</a>
+              <a @click='currentTab = "login-window"' href="#">login</a>
+              <a @click='currentTab = "register-window"' href="#">signup</a>
+              <keep-alive>
+                <component :is='currentTab'></component>
+              </keep-alive>
             </div>
           </div>
-          <div id="f-main" v-bind:style="styleDat">
-
-          </div>
-          <div id="f-send-msg" v-bind:style="styleDat">
-
-          </div>
         </div>
-        <div class="col-2 p-0">
-          <div id="f-gui" v-bind:style="styleDat">
-            
-          </div>
+        <div class="col-6 p-0 m-0" align="center">
+          <canvas></canvas>
         </div>
-        <div class="col-6 ml-1">
-          <canvas width="640" height="480"></canvas>
+        <div class="col-3 pl-0 pr-3 m-0">
+          <div id="f-gui" :style="styleDat"></div>
         </div>
-
       </div>
     </container>
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
-    <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
     <script src="comp.js"></script>
   </body>
 </html>
