randomized spawn points added

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.dev.js"></script>
     <link rel="stylesheet" href="index.css">
+    <script src="index.js"></script>
     <script src="a.out.js"></script>
     <script src="racket.js"></script>
-    <script src="index.js"></script>
   </head>
   <body>
     <container>
@@ -38,7 +38,7 @@
         </div>
       </div>
     </container>
-    <script src="https://unpkg.com/vue/dist/vue.js"></script>
+    <script src="https://unpkg.com/vue/dist/vue.min.js"></script>
     <script src="comp.js"></script>
   </body>
 </html>
