Making the UI fancy

--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,9 @@
             </div>
           </div>
         </div>
-        <div class="col-6 p-0 m-0" align="center">
+        <div id="game-window" style="background-color:#c9a700" class="col-6 p-0 m-0" align="center">
           <canvas></canvas>
+          <div class='appear'></div>
         </div>
         <div class="col-3 pl-0 pr-3 m-0">
           <div id="f-gui" :style="styleDat"></div>
