Frag counter added

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,9 @@
           <div class='appear'></div>
         </div>
         <div class="col-3 pl-0 pr-3 m-0">
-          <div id="f-gui" :style="styleDat"></div>
+          <div id="f-gui" :style="styleDat">
+            <controls></controls>
+          </div>
         </div>
       </div>
     </container>
