UI menu sprucing

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="index.css">
     <script src="index.js"></script>
     <script src="a.out.js"></script>
-    <script src="racket.js"></script>    
+    <script src="racket.js"></script>
   </head>
   <body>
     <container>
@@ -20,6 +20,7 @@
               <a @click='currentTab = "chat-window"' href="#">chat</a>
               <a @click='currentTab = "login-window"' href="#">login</a>
               <a @click='currentTab = "register-window"' href="#">signup</a>
+              <a @click='currentTab = "about-window"' href="#">about</a>
 
                 <transition name="component-fade" mode="out-in">
                   <keep-alive>
