tidy up front main page

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <body>
     <container>
       <div class="row">
-        <div class="col-3 pl-3 pr-0 m-0">
+        <div class="col-3 p-0 m-0">
           <div id="f-nav" :style="styleDat">
             <div>
               <a @click='currentTab = "chat-window"' href="#">chat</a>
@@ -35,7 +35,7 @@
           <canvas></canvas>
           <div class='appear'></div>
         </div>
-        <div class="col-3 pl-0 pr-3 m-0">
+        <div class="col-3 p-0 m-0">
           <div id="f-gui" :style="styleDat">
             <controls></controls>
           </div>
